# in-browser-microservice

./: .gitignore  Dockerfile  README.md  build-for-client.sh  docker-compose.yml  flake.nix  traefik.yml
ansible/: ansible.cfg  deploy-app.yaml  vault.yml
ansible/inventories/: main.yaml
ansible/templates/: .env.j2
convertedClient/: .gitignore  contact.html  di.js  index.html  main.html  package-lock.json  package.json  profile.html  signup.html  vite.config.js
convertedClient/public/: benchmark-ui.html
convertedClient/script/: annuaire-service.js  benchmark-ui.js  benchmark.js  consts.js  contact-js.js  create-post.js  index-js.js  main-js.js  peer-js-receiver-service.js  peerjs-service.js  (+7 more)
convertedMicroServices/: .gitignore  CMakeLists.txt
convertedMicroServices/HomeTimelineHandler/: HomeTimelineHandler.cpp
convertedMicroServices/PostStorageHandler/: PostStorageHandler.cpp  PostStorageHandler.hpp
convertedMicroServices/SessionStorageUserService/: SessionStorageUserService.cpp
convertedMicroServices/SocialGraphHandler/: SocialGraphHandler.cpp  SocialGraphHandler.hpp
convertedMicroServices/Types/User/: User.hpp
convertedMicroServices/UniqueIdHandler/: UniqueIdHandler.cpp
convertedMicroServices/UserHandler/: UserHandler.cpp
convertedMicroServices/src/HomeTimelineHandler/: HomeTimelineHandler.cpp  HomeTimelineHandler.hpp
convertedMicroServices/src/PostStorageHandler/: PostStorageHandler.cpp  PostStorageHandler.hpp
convertedMicroServices/src/SessionStorageUserService/: SessionStorageUserService.cpp  SessionStorageUserService.hpp
convertedMicroServices/src/SocialGraphHandler/: SocialGraphHandler.cpp  SocialGraphHandler.hpp
convertedMicroServices/src/Types/Post/: Post.cpp  Post.hpp
convertedMicroServices/src/UniqueIdHandler/: UniqueIdHandler.hpp
convertedMicroServices/src/UserTimelineHandler/: UserTimelineHandler.cpp
ws-server/: Dockerfile
(+10 files in other folders)
